// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test async actions creates authSuccess when login is done 1`] = `
Array [
  Object {
    "type": "AUTH_START",
  },
  Object {
    "data": Object {
      "name": "Tunde",
      "token": "secret",
    },
    "type": "AUTH_SUCCESS",
  },
]
`;

exports[`test async actions creates authSuccess when login is done 2`] = `
Array [
  Object {
    "type": "AUTH_START",
  },
  Object {
    "error": "invalid password",
    "type": "AUTH_FAILED",
  },
]
`;

exports[`test async actions should test checkAuth 1`] = `Array []`;

exports[`test authentication actions should call authFailed when the action is dispatched 1`] = `
Array [
  Object {
    "data": Object {
      "name": "Tunde",
      "token": "token",
    },
    "type": "AUTH_SUCCESS",
  },
  Object {
    "error": Object {
      "error": "sorry",
    },
    "type": "AUTH_FAILED",
  },
]
`;

exports[`test authentication actions should call authSuccess when the action is dispatched 1`] = `
Array [
  Object {
    "data": Object {
      "name": "Tunde",
      "token": "token",
    },
    "type": "AUTH_SUCCESS",
  },
]
`;

exports[`test reducers should update the state when authFailed is called 1`] = `
Object {
  "data": Object {},
  "error": Object {
    "error": "invalid password",
  },
  "isAuthenticated": false,
  "isLoading": false,
}
`;

exports[`test reducers should update the state when loginSucces is called 1`] = `
Object {
  "data": Object {
    "name": "Tunde",
    "token": "token",
  },
  "error": null,
  "isAuthenticated": true,
  "isLoading": false,
}
`;
